tests/negative/neg_own_observe_mutate.safe
-- Test: neg_own_observe_mutate
-- Description: Mutating the designated object through an observer.
--   An observer (access constant) should provide read-only access.
--   Writing through it violates the observation contract.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.4a.p102a:5bc5ab8b
-- Expected: REJECT observe_mutation

package Observe_Mutate_Test is

   type Config is record
      Rate : Natural;
   end record;

   type Config_Ptr is access Config;

   --  Mutate_Through_Observer: attempts to write via a constant access.
   procedure Mutate_Through_Observer is
      Owner    : Config_Ptr = new ((Rate = 100) as Config);
      Observer : access constant Config = Owner;  -- observe
   begin
      --  Observer is access constant; writing through it is illegal.
      Observer.all.Rate = 200;  -- ERROR: mutation through observer
   end Mutate_Through_Observer;

end Observe_Mutate_Test;
